# llvm-project

./: analyze_ldp_stp_detailed.sh  analyze_ldp_stp_fixed.sh  call_site_pairing.cpp  compare_ldp_stp.sh  count_all_pairs.sh  immediate_x8x9_fix.cpp  inspect_regression.sh  matrix_regression_fix.cpp  preserve_order_pairing.cpp  test_bb_granular.ll
.ci/: all_requirements.txt  compute_projects.py  monolithic-linux.sh  monolithic-windows.sh
bolt/utils/: nfc-check-setup.py
clang/: CMakeLists.txt  Maintainers.rst
clang-tools-extra/clang-doc/: BitcodeReader.cpp  BitcodeReader.h  BitcodeWriter.cpp  Generators.cpp  HTMLGenerator.cpp  HTMLMustacheGenerator.cpp  JSONGenerator.cpp  MDGenerator.cpp  Mapper.cpp  Representation.cpp  Representation.h  Serialize.cpp  Serialize.h  YAMLGenerator.cpp
clang-tools-extra/clang-tidy/: add_new_check.py  rename_check.py
clang-tools-extra/clangd/: FindTarget.cpp  Hover.cpp  InlayHints.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: LanguageExtensions.rst  OpenMPSupport.rst  ReleaseNotes.md  ReleaseNotes.rst  ThreadConvergence.rst  UsersManual.rst  index.rst
clang/tools/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: config-ix.cmake
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/instrumentor-examples/precision-analysis/: CMakeLists.txt  precision_analysis_runtime.cpp
compiler-rt/test/: CMakeLists.txt
flang/docs/: DoConcurrentConversionToOpenMP.md  OpenMPSupport.md
libc/include/: CMakeLists.txt  stdlib.yaml
libclc/: CMakeLists.txt
libclc/utils/: CMakeLists.txt
libcxx/include/: CMakeLists.txt  __node_handle  __tree  fstream  map
libcxx/src/: CMakeLists.txt  atomic.cpp
libcxxabi/: CMakeLists.txt
libcxxabi/include/: __cxxabi_config.h
libcxxabi/src/: cxa_personality.cpp
libunwind/include/: __libunwind_config.h  libunwind.h
libunwind/src/: UnwindLevel1.c  UnwindRegistersRestore.S  UnwindRegistersSave.S  libunwind.cpp
lld/ELF/: Options.td  Relocations.cpp  ScriptParser.cpp  SyntheticSections.cpp
lldb/docs/: dil-expr-lang.ebnf
llvm/: CMakeLists.txt
llvm-libgcc/: CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/docs/: AMDGPUUsage.rst  LangRef.md  LangRef.rst  MLGO.rst  ReleaseNotes.md  UserGuides.rst
llvm/test/: lit.cfg.py
llvm/utils/: profcheck-xfail.txt  update_mc_test_checks.py
mlir/: CMakeLists.txt
(+1870 files in other folders)
